# powdb

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF-MISSION-A.md  HANDOFF.md  PLAN-MISSION-A-REVIEW.md  PLAN-MISSION-A.md  PROMPT-FOR-NEW-SESSION.md  README.md  SECURITY.md  SPRINT-PLAN.md  TODO.md  batadb-checkpoint-layer1.md  batadb-implementation-brief.md  batadb-strategic-roadmap.md  batadb-wire-protocol.md  bataql-language-design.md  docker-compose.yml  fly.toml  powdb-checkpoint-layer1.md  powdb-strategic-roadmap.md
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  fuzz.yml  release.yml
clients/go/: README.md  client.go  go.mod  protocol.go  protocol_test.go
clients/java/: README.md  pom.xml
clients/java/src/main/java/dev/zvn/powdb/: Client.java  Message.java  PowDBException.java  Protocol.java  ProtocolException.java  QueryResult.java
clients/java/src/test/java/dev/zvn/powdb/: ProtocolTest.java
clients/python/: README.md  pyproject.toml
clients/python/src/powdb/: __init__.py  client.py  protocol.py
clients/python/tests/: test_protocol.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs  protocol.rs
clients/ts/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/ts/demo/: demo.ts
clients/ts/src/: index.ts  protocol.ts
clients/ts/test/: client.test.ts
crates/bench/: Cargo.toml
crates/bench/baseline/: main.json  thesis-ratios.json
crates/bench/benches/: powql.rs  storage.rs
crates/bench/src/: smoke.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compare/: Cargo.toml
crates/compare/src/: main.rs
crates/compare/src/engines/: mod.rs  mysql.rs  postgres.rs  powdb.rs  sqlite.rs
crates/query/: Cargo.toml
crates/query/fuzz/: Cargo.toml
crates/query/fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs  fuzz_roundtrip.rs
crates/query/src/: ast.rs  canonicalize.rs  executor.rs  lexer.rs  lib.rs  parser.rs  plan.rs  plan_cache.rs  planner.rs  result.rs  token.rs
crates/query/tests/: parser_edge_cases.rs  wal_recovery_executor.rs
crates/server/: Cargo.toml
crates/server/src/: handler.rs  lib.rs  main.rs  protocol.rs
crates/server/tests/: concurrent_read.rs  integration.rs
crates/storage/: Cargo.toml
crates/storage/src/: btree.rs  buffer.rs  catalog.rs  disk.rs  heap.rs  lib.rs  mvcc.rs  page.rs  row.rs  table.rs  tx.rs  types.rs  view.rs  wal.rs
crates/storage/tests/: index_persistence.rs  proptest_row.rs  wal_recovery.rs
docs/: POWQL.md  getting-started.md
docs/benchmarks/: 2026-04-07-wide-bench-snapshot.md
docs/design/: powdb-implementation-brief.md  powdb-wire-protocol.md  powql-language-design.md
docs/superpowers/plans/: 2026-04-06-batadb-implementation.md  2026-04-06-powdb-implementation.md  2026-04-08-mission-b-implementation-plan.md
docs/superpowers/specs/: 2026-04-07-bench-regression-gate-design.md  2026-04-08-mission-b-durability-and-concurrency.md  2026-04-08-mission-c-write-path-perf.md  2026-04-08-mission-d-read-path-perf.md  2026-04-08-mission-e-language-features.md  2026-04-08-mission-f-build-profile-quick-wins.md
scripts/: update-bench-baseline.sh
turbodb-experiments/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
turbodb-experiments/src/: results-collector.js  run-all.js  server.js
turbodb-experiments/src/benchmarks/: 01-page-io.js  02-row-formats.js  03-sqlite-compare.js  04-index-perf.js  05-wal-cost.js  06-mvcc-cost.js  07-vectorized.js  utils.js
turbodb-experiments/src/formats/: row-formats.js
turbodb-experiments/src/storage/: btree.js  page-manager.js  wal.js
