[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powdb"
version = "0.1.0"
description = "Python client for PowDB (PowQL wire protocol)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["powdb", "database", "client", "powql"]
authors = [{ name = "zvndev" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Homepage = "https://github.com/zvndev/powdb"
Repository = "https://github.com/zvndev/powdb"

[tool.hatch.build.targets.wheel]
packages = ["src/powdb"]
