[package]
name = "powdb-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
powdb-storage = { path = "../storage" }
powdb-query = { path = "../query" }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
powdb-storage = { path = "../storage" }
powdb-query = { path = "../query" }

[[bin]]
name = "smoke-bench"
path = "src/smoke.rs"

[[bin]]
name = "compare"
path = "src/bin/compare.rs"

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "powql"
harness = false
