[package]
name = "powdb-cli"
description = "Interactive REPL and CLI for PowDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
powdb-storage = { path = "../storage" }
powdb-query = { path = "../query" }
powdb-server = { path = "../server" }
rustyline = "15"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
