[package]
name = "powdb-query"
description = "PowQL lexer, parser, planner, and executor for PowDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
powdb-storage = { path = "../storage" }
thiserror.workspace = true
tracing.workspace = true
rustc-hash.workspace = true
