[package]
name = "powdb-server"
version.workspace = true
edition.workspace = true

[dependencies]
powdb-storage = { path = "../storage" }
powdb-query = { path = "../query" }
tokio = { version = "1", features = ["full"] }
thiserror.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
