[package]
name = "powdb-server"
description = "Async TCP server for PowDB with binary wire protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
powdb-storage = { path = "../storage" }
powdb-query = { path = "../query" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time", "signal"] }
thiserror.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
