[package]
name = "powdb-storage"
description = "Slotted-page heap, B+tree indexes, and WAL for PowDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
bytes.workspace = true
crc32fast.workspace = true
tracing.workspace = true
rustc-hash.workspace = true
libc = "0.2"

[dev-dependencies]
proptest = "1"
