[package]
name = "powdb-query-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata.cargo-fuzz]
# cargo-fuzz metadata

cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
powdb-query = { path = ".." }
powdb-storage = { path = "../../storage" }

# Prevent this from being discovered by the workspace
[workspace]

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
